--- a/index.html
+++ b/index.html
@@ -365,13 +365,25 @@
 							 	<label class="col-sm-2 control-label">Checkout Modal</label>
 							 	<div class="col-sm-10">
 						 		 	<label class="radio-inline js-update-ui">
-						 				<input type="radio" name="keep-shopping-modal" data-output="keep_shopping_modal" value="no" checked> Sends user to cart automatically
+						 				<input type="radio" name="keep-shopping-modal" data-output="auto_add_to_cart" value="yes" checked> Sends user to cart automatically
 						 		 	</label>
 						 		 	<label class="radio-inline js-update-ui">
-						 				<input type="radio" name="keep-shopping-modal" data-output="keep_shopping_modal" value="yes"> Show modal
+						 				<input type="radio" name="keep-shopping-modal" data-output="auto_add_to_cart" value="no"> Show modal
 						 		 	</label>
 							 	</div>
 					  	</div>
+
+			  	  	<div class="form-group js-form-group row banner-setup">
+			  			 	<label class="col-sm-2 control-label">Calendar Display</label>
+			  			 	<div class="col-sm-10">
+			  		 		 	<label class="radio-inline js-update-ui">
+			  		 				<input type="radio" name="calendar-display" data-output="calendar_display" value="modal" checked> Modal
+			  		 		 	</label>
+			  		 		 	<label class="radio-inline js-update-ui">
+			  		 				<input type="radio" name="calendar-display" data-output="calendar_display" value="inline"> Inline
+			  		 		 	</label>
+			  			 	</div>
+			  	  	</div>
 
 					  	<div class="form-group js-form-group row banner-setup">
 							 	<label class="col-sm-2 control-label">Clickable Product Image Overlay</label>
