--- a/index.html
+++ b/index.html
@@ -138,17 +138,17 @@
 						<div class="col-sm-8 col-sm-offset-2">
 							<div class="panel panel-info marg-top form-group">
 								<div class="panel-heading">
-									<h4><span class="glyphicon glyphicon-cog"></span> More Options</h4>
+									<h4 class="text-center"><span class="glyphicon glyphicon-cog"></span> More Options</h4>
 								</div>
-								<div class="panel-body">
-									<h5>CTA Buttons</h5>
-									<p>Adding a class of <strong>cta_button</strong> to any link on the homepage will create a button below the hero (ala FNM&rsquo;s blue buttons)</p>
+								<div class="panel-body text-info">
+									<h4>CTA Buttons</h4>
+									<p>Adding a class of <strong><em>cta_button</em></strong> to any link on the homepage will create a button below the hero (ala FNM&rsquo;s blue buttons)</p>
 
-									<h5>CTA Links</h5>
-									<p>Adding a class of <strong>cta_link</strong> to any link on the homepage will create a link below CTA Buttons and/or Hero (ala left nav on Cheryls)</p>
+									<h4>CTA Links</h4>
+									<p>Adding a class of <strong><em>cta_link</em></strong> to any link on the homepage will create a link below CTA Buttons and/or Hero (ala left nav on Cheryls)</p>
 
-									<h5>Hide Nav Links</h5>
-									<p>Add a class of <strong>hide_from_mobile</strong></p>
+									<h4>Hide Nav Links</h4>
+									<p>Add a class of <strong><em>hide_from_mobile</em></strong> to any link you wish to hide on mobile</p>
 								</div>
 							</div>
 						</div>
@@ -178,7 +178,7 @@
 					  	<div class="form-group js-form-group row" data-show-req="cat-banner-image">
 							 	<label class="col-sm-2 control-label">URL</label>
 							 	<div class="col-sm-8">
-						 		 	<input data-output="banner_url" type="text" class="form-control" placeholder="Custom URL" value="">
+						 		 	<input data-output="banner_url" type="text" class="form-control" placeholder="Custom URL (Optional)" value="">
 							 	</div>
 					  	</div>
 
@@ -192,26 +192,26 @@
 					  	<div class="form-group js-form-group row hidden" data-show-req="cat-banner-text">
 							 	<label class="col-sm-2 control-label">URL</label>
 							 	<div class="col-sm-8">
-						 		 	<input data-output="banner_url" type="text" class="form-control" placeholder="Custom URL">
+						 		 	<input data-output="banner_url" type="text" class="form-control" placeholder="Custom URL (Optional)">
 							 	</div>
 					  	</div>
 
 					  	<div class="form-group js-form-group row hidden" data-show-req="cat-banner-text">
-							 	<label class="col-sm-2 control-label">Title Text</label>
+							 	<label class="col-sm-2 control-label">Title</label>
 							 	<div class="col-sm-8">
 						 		 	<input data-output="banner_url" type="text" class="form-control" placeholder="Title Text (Optional)">
 							 	</div>
 					  	</div>
 
 					  	<div class="form-group js-form-group row hidden" data-show-req="cat-banner-text">
-							 	<label class="col-sm-2 control-label">Normal Text</label>
+							 	<label class="col-sm-2 control-label">Body</label>
 							 	<div class="col-sm-8">
 						 		 	<input data-output="banner_url" type="text" class="form-control" placeholder="Normal Text (Optional)">
 							 	</div>
 					  	</div>
 
 					  	<div class="form-group js-form-group row hidden" data-show-req="cat-banner-text">
-							 	<label class="col-sm-2 control-label">Disclaimer Text</label>
+							 	<label class="col-sm-2 control-label">Disclaimer</label>
 							 	<div class="col-sm-8">
 						 		 	<input data-output="banner_url" type="text" class="form-control" placeholder="Disclaimer Text (Optional)">
 							 	</div>
@@ -226,7 +226,7 @@
 					  	</div>
 
 					  	<div class="form-group js-form-group row hidden" data-show-req="cat-banner-text">
-							 	<label class="col-sm-2 control-label">Text Color</label>
+							 	<label class="col-sm-2 control-label">Body Color</label>
 							 	<div class="col-sm-5 col-md-4 col-lg-3 input-group">
 							 		<span class="input-group-addon">#</span>
 						 		 	<input data-output="banner_url" type="text" class="form-control" placeholder="Leave blank for brand colors">
@@ -289,7 +289,7 @@
 					  	<div class="form-group js-form-group row" data-show-req="prod-banner-image">
 							 	<label class="col-sm-2 control-label">URL</label>
 							 	<div class="col-sm-8">
-						 		 	<input data-output="banner_url" type="text" class="form-control" placeholder="Custom URL" value="">
+						 		 	<input data-output="banner_url" type="text" class="form-control" placeholder="Custom URL (Optional)" value="">
 							 	</div>
 					  	</div>
 
@@ -303,26 +303,26 @@
 					  	<div class="form-group js-form-group row hidden" data-show-req="prod-banner-text">
 							 	<label class="col-sm-2 control-label">URL</label>
 							 	<div class="col-sm-8">
-						 		 	<input data-output="banner_url" type="text" class="form-control" placeholder="Custom URL">
+						 		 	<input data-output="banner_url" type="text" class="form-control" placeholder="Custom URL (Optional)">
 							 	</div>
 					  	</div>
 
 					  	<div class="form-group js-form-group row hidden" data-show-req="prod-banner-text">
-							 	<label class="col-sm-2 control-label">Title Text</label>
+							 	<label class="col-sm-2 control-label">Title</label>
 							 	<div class="col-sm-8">
 						 		 	<input data-output="banner_url" type="text" class="form-control" placeholder="Title Text (Optional)">
 							 	</div>
 					  	</div>
 
 					  	<div class="form-group js-form-group row hidden" data-show-req="prod-banner-text">
-							 	<label class="col-sm-2 control-label">Normal Text</label>
+							 	<label class="col-sm-2 control-label">Body</label>
 							 	<div class="col-sm-8">
 						 		 	<input data-output="banner_url" type="text" class="form-control" placeholder="Normal Text (Optional)">
 							 	</div>
 					  	</div>
 
 					  	<div class="form-group js-form-group row hidden" data-show-req="prod-banner-text">
-							 	<label class="col-sm-2 control-label">Disclaimer Text</label>
+							 	<label class="col-sm-2 control-label">Disclaimer</label>
 							 	<div class="col-sm-8">
 						 		 	<input data-output="banner_url" type="text" class="form-control" placeholder="Disclaimer Text (Optional)">
 							 	</div>
@@ -425,7 +425,7 @@
 			  {{~#if heroes}}{{~#each heroes}}<div class="_custom_hero" data-hero_src="{{src}}" data-hero_title="{{title}}" data-hero_link="{{link}}"></div>{{/each}}{{/if}}</div>
 		</script>
 		<script id="hero-tile-template" type="text/x-handlebars-template">
-			<div class="row">
+			<div class="row hero-row">
 				<div class="col-sm-2 text-right text-danger">
 					<span class="glyphicon glyphicon-remove js-delete-row clickable"></span>
 				</div>
