--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 			 <li><a href="#category" data-toggle="tab">Category</a></li>
 			 <li><a href="#product" data-toggle="tab">Product</a></li>
 			 <li><a href="#redirects" data-toggle="tab">Redirects</a></li>
+			 <li><a href="#cart_pages" data-toggle="tab">Cart Pages</a></li>
 		  </ul>
 
 		  <!-- Tab panes -->
@@ -472,6 +473,44 @@
 				</div>
 			</div> <!-- #redirects -->
 
+			<div class="tab-pane" id="cart_pages">
+				<div role="form">
+					<div class="form-horizontal row">
+						<div class="col-sm-12">
+
+							<!-- Add Gift Message -->
+					  	<div class="form-group js-form-group row hero-layouts marg-top">
+				  			<h3 class="col-sm-10 col-sm-offset-2">Recipient Page</h3>
+							 	<label class="col-sm-2 control-label">Add Gift Message</label>
+							 	<div class="col-sm-10">
+						 		 	<label class="radio-inline js-update-ui">
+						 				<input type="radio" name="cart-gift-message-toggle" data-output="add_gift_message_ckeckbox" value="yes"  data-req-name="gift-message-show" checked="checked"> Show
+						 		 	</label>
+						 		 	<label class="radio-inline js-update-ui">
+						 				<input type="radio" name="cart-gift-message-toggle" data-output="add_gift_message_ckeckbox" value="no" data-req-name="gift-message-hide"> Hide
+						 		 	</label>
+							 	</div>
+					  	</div>
+
+				  	</div>
+			  	</div>
+
+					<!-- Get Code for Cart Pages -->
+					<div class="row clearfix">
+						<div class="col-sm-8 col-sm-offset-2">
+							<h4 class="text-center">Press 'Get Code' to output your code for the Cart Pages</h4>
+							<textarea id="cat-output" class="form-control code-output marg-btm" style="height: 150px;"></textarea>
+							<div class="row">
+								<div class="col-sm-6 col-sm-offset-3">
+									<button type="button" class="btn btn-primary btn-lg js-convert-trigger btn-block" data-output-template="mobile-layout-settings-template">Get Code</button>
+								</div>
+							</div>
+						</div>
+					</div>
+
+				</div>
+			</div> <!-- #Cart Pages-->
+			
 		</div>
 	  <div class="page-footer" style="height: 60px"></div>
 
