--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
 				  			<label class="col-sm-2 control-label">Hero Setup</label>
 				  			<div class="col-sm-10">
 								 	<label class="radio-inline js-update-ui">
-										<input type="radio" name="home-hero-layout-setup" data-output="hero_layout_setup" value="auto" data-req-name="hero-setup-auto" checked> Auto
+										<input type="radio" name="home-hero-layout-setup" data-output="hero_layout_setup" value="auto" data-req-name="hero-setup-auto"> Auto
 								 	</label>
 								 	<label class="radio-inline js-update-ui">
-										<input type="radio" name="home-hero-layout-setup" data-output="hero_layout_setup" value="custom" data-req-name="hero-setup-custom"> Custom
+										<input type="radio" name="home-hero-layout-setup" data-output="hero_layout_setup" value="custom" data-req-name="hero-setup-custom" checked> Custom
 								 	</label>
 								 </div>
 					  	</div>
@@ -526,20 +526,30 @@
 		</script>
 		<script id="hero-tile-template" type="text/x-handlebars-template">
 			<div class="row hero-row">
-				<div class="col-sm-2 text-right text-danger">
-					<span class="glyphicon glyphicon-remove js-delete-row clickable"></span>
+				<div class="col-sm-12 text-danger delete-row">
+					<p class="js-delete-row clickable"><span class="glyphicon glyphicon-remove"></span> Row</p>
 				</div>
-				<div class="col-sm-5 hero">
+				<div class="js-hero-img-preview col-sm-2">
+					<div class="thumbnail img-empty">
+						<img src="">
+					</div>
+				</div>
+				<div class="col-sm-4 hero">
 		    	<label>Left Image</label>
-		    	<input data-output="hero-image" type="text" class="form-control" placeholder="Link to image">
+		    	<input data-output="hero-image" type="text" class="form-control js-hero-img-input" placeholder="Link to image">
 		    	<label>Left Title</label>
 		    	<input data-output="hero-title" type="text" class="form-control" placeholder="Product title">
 		    	<label>Left Link</label>
 		    	<input data-output="hero-link"type="text" class="form-control" placeholder="Link to product">
 		  	</div>
-		  	<div class="col-sm-5 hero">
+		  	<div class="js-hero-img-preview col-sm-2">
+		  		<div class="thumbnail img-empty">
+		  			<img src="">
+		  		</div>
+		  	</div>
+		  	<div class="col-sm-4 hero">
 		    	<label>Right Image</label>
-		    	<input data-output="hero-image" type="text" class="form-control" placeholder="Link to image">
+		    	<input data-output="hero-image" type="text" class="form-control js-hero-img-input" placeholder="Link to image">
 		    	<label>Right Title</label>
 		    	<input data-output="hero-title" type="text" class="form-control" placeholder="Product title">
 		    	<label>Right Link</label>
@@ -549,9 +559,14 @@
 		</script>
 		<script id="hero-single-template" type="text/x-handlebars-template">
 			<div class="row">
-				<div class="hero col-sm-8 col-sm-offset-2">
+				<div class="js-hero-img-preview col-sm-2">
+					<div class="thumbnail img-empty">
+						<img src="">
+					</div>
+				</div>
+				<div class="hero col-sm-8">
 		    	<label>Image</label>
-		    	<input data-output="hero-image" type="text" class="form-control" placeholder="Link to image">
+		    	<input data-output="hero-image" type="text" class="form-control js-hero-img-input" placeholder="Link to image">
 		    	<label>Link</label>
 		    	<input type="text" data-output="hero-link"class="form-control" placeholder="Link to product">
 		  	</div>
