Add data-find_a_gift_fast attribute

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 						<div class="col-sm-12">
 
 							<!-- Hero layouts -->
-					  	<div class="form-group js-form-group row hero-layouts marg-top">
+							<div class="form-group js-form-group row hero-layouts marg-top">
 				  			<h3 class="col-sm-10 col-sm-offset-2">Home Page Heroes</h3>
 							 	<label class="col-sm-2 control-label">Hero Layouts</label>
 							 	<div class="col-sm-10">
@@ -53,10 +53,10 @@
 						 		 	</label>
 							 	</div>
 					  	</div>
-				  	</div>
+					  	</div>
 
-				  	<!-- Hero setups -->
-				  	<div class="col-sm-12 hero-setup marg-btm">
+						<!-- Hero setups -->
+						<div class="col-sm-12 hero-setup marg-btm">
 				  		<div class="row form-group js-form-group" data-output="hero-setup" data-hide-req="hero-hide">
 				  			<label class="col-sm-2 control-label">Hero Setup</label>
 				  			<div class="col-sm-10">
@@ -105,23 +105,40 @@
 					  	</div>
 				  	</div>
 
-				  	<!-- Show body nav -->
-				  	<div class="col-sm-12 marg-top">
-				  		<div class="row form-group js-form-group">
-				  			<h3 class="col-sm-10 col-sm-offset-2">Home Page Navigation</h3>
-			  				<label class="col-sm-2 control-label">Show Body Nav</label>
-			  				<div class="col-sm-10">
-			  				 	<label class="radio-inline">
-			  						<input type="radio" name="home-body-nav" data-output="home_body_nav" value="yes" checked> Yes
-			  				 	</label>
-			  				 	<label class="radio-inline">
-			  						<input type="radio" name="home-body-nav" data-output="home_body_nav" value="no"> No
-			  				 	</label>
-			  				</div>
-				  	  </div>
-				  	</div>
-					</div>
+						<!-- Show body nav -->
+						<div class="col-sm-12 marg-top">
+					  		<div class="row form-group js-form-group">
+					  			<h3 class="col-sm-10 col-sm-offset-2">Home Page Navigation</h3>
+				  				<label class="col-sm-2 control-label">Show Body Nav</label>
+				  				<div class="col-sm-10">
+				  				 	<label class="radio-inline">
+				  						<input type="radio" name="home-body-nav" data-output="home_body_nav" value="yes" checked> Yes
+				  				 	</label>
+				  				 	<label class="radio-inline">
+				  						<input type="radio" name="home-body-nav" data-output="home_body_nav" value="no"> No
+				  				 	</label>
+				  				</div>
+					  	  </div>
+					  	</div>
 
+						<!-- Show Find a Gift Fast -->
+						<div class="col-sm-12 marg-top">
+							<div class="row form-group js-form-group">
+								<h3 class="col-sm-10 col-sm-offset-2">Find a Gift Fast</h3>
+								<label class="col-sm-2 control-label">Display option</label>
+								<div class="col-sm-10">
+									<label class="radio-inline">
+										<input type="radio" name="find-a-gift-fast" data-output="find_a_gift_fast" value="yes" checked> Show
+									</label>
+									<label class="radio-inline">
+										<input type="radio" name="find-a-gift-fast" data-output="find_a_gift_fast" value="no"> Hide
+									</label>
+								</div>
+							</div>
+						</div>
+					
+					</div>
+					
 					<!-- Get Code for Home -->
 					<div class="row clearfix">
 						<div class="col-sm-8 col-sm-offset-2">
